# cmake_minimum_required(VERSION <specify CMake version here>)
project(AppSec_Assignment1)

set(CMAKE_CXX_STANDARD 14)

add_executable(AppSec_Assignment1
        .idea/.gitignore
        .idea/AppSec-Assignment1.iml
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        .travis.yml
        README.md
        spell.c)
